; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/video_layout/extr_load.c_load_group.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/video_layout/extr_load.c_load_group.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @load_group to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @load_group(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  store i32 1, i32* %5, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = call i32* @scope_add_group(i32* %7)
  store i32* %8, i32** %6, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @scope_push(i32* %9)
  %11 = load i32*, i32** %3, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @load_view(i32* %11, i32* %12, i32* %13, i32 1)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %2
  store i32 0, i32* %5, align 4
  br label %17

17:                                               ; preds = %16, %2
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @scope_pop(i32* %18)
  %20 = load i32, i32* %5, align 4
  ret i32 %20
}

declare dso_local i32* @scope_add_group(i32*) #1

declare dso_local i32 @scope_push(i32*) #1

declare dso_local i32 @load_view(i32*, i32*, i32*, i32) #1

declare dso_local i32 @scope_pop(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
